--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ org.gradle.jvmargs=-Xmx1G
 	litematica=4447936
 	litematica_minecraft_version=1.19.4
 	malilib=4444338
+    netty_raknet_version=ae1f415e05
