--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,6 +40,7 @@ jobs:
           java-version: 19
 
       - name: Build with Gradle
+	run: chmod +ux gradlew
         run: ./gradlew build --no-daemon
       - name: Capture build artifacts
         uses: actions/upload-artifact@v3
