--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   build:
+    name: Build and Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -33,17 +34,22 @@ jobs:
 
       - name: Validate the Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
+
       - name: Setup JDK
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 19
 
+      - name: Chmod
+        shell: bash
+        run: chmod +x gradlew
+
       - name: Build with Gradle
-	run: chmod +ux gradlew
         run: ./gradlew build --no-daemon
+
       - name: Capture build artifacts
         uses: actions/upload-artifact@v3
         with:
           name: Sharematica
-          path: build/libs/
+          path: build/libs/*.jar
